--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,7 +17,7 @@ collections:
     editor:
       preview: false
     fields:
-      - {label: 'Featured Image', name: 'thumbnail', widget: 'image'}
+      - { label: 'Image', name: 'image', widget: 'image'}
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
