--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,8 +17,10 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: 'Image', name: 'image', widget: 'image'}
+      - { label: 'Featured Image', name: 'thumbnail', widget: 'image', choose_url: true, default: "/uploads/chocolate-dogecoin.jpg", media_library: "/static"}
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
       - { label: 'Body', name: 'body', widget: 'markdown' }
+      - { label: 'Categories', name: 'categories', widget: 'categories' }
+      - { label: 'Tags', name: 'tags', widget: 'tags' }
